Fixed problem of intro link's overlapping of text in some cases.

--- a/xul/skin/style.css
+++ b/xul/skin/style.css
@@ -54,6 +54,8 @@ a:active{color:blue;}
 	color: black;
 }
 .chapnum {
+  margin-top:12px;
+  margin-bottom:12px;
   font-size:28px;
   font-weight:bold;
   color:rgb(110,85,110);
@@ -118,13 +120,8 @@ a:active{color:blue;}
   position:absolute;
 }
 .audiolink {
-  position:relative; 
-  top:-10px;
   width:45px;
   height:37px;
-  margin-left:35px;
-  margin-right:35px;
-  margin-bottom:-10px;
 }
 .introlink {
   font-size:20px;
